# oktal

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  spack.yaml
.cache/clangd/index/: Box.hpp.73EA9B18D86F9140.idx  Box.hpp.DA8B50639BE917A3.idx  CellOctree.cpp.2EF412EB58BA52D6.idx  CellOctree.hpp.BB49E94A638D8A34.idx  MortonIndex.cpp.7FDAF84912AA681F.idx  MortonIndex.cpp.9507BC74A3D4837D.idx  MortonIndex.hpp.5ECEE92569D05496.idx  MortonIndex.hpp.A4F91473F6FEFDDB.idx  OctreeGeometry.cpp.74A7B7C50EF0B7A7.idx  OctreeGeometry.hpp.3DDCF5B1BE4603F6.idx  OctreeGeometry.hpp.C08EC6913E8A49F2.idx  PeriodicBox.cpp.B43E68CC924AF8BD.idx  PeriodicBox.cpp.FE056B42CC44E65F.idx  PeriodicBox.cpp.FF1D9EDA6BF5EA6D.idx  PeriodicBox.hpp.17B0CE1EF6AFD4C3.idx  PeriodicBox.hpp.A4400ECA0D7ED308.idx  PeriodicBox.hpp.BC62D140604729E3.idx  TestBox.cpp.6C65CE59EA9DB93C.idx  TestBox.cpp.8D901D3E24585C42.idx  TestCellView.cpp.B77A93F33BE502A4.idx  TestMortonIndex.cpp.2E96912863CF3BB7.idx  TestMortonIndex.cpp.808161823BF24B6B.idx  TestNodesStream.cpp.098352C33358798B.idx  TestOctreeGeometry.cpp.72FA9F6E6DA77C81.idx  TestOctreeGeometry.cpp.BC2E4774BDE5AC5A.idx  TestPeriodicBox.cpp.4F6004019CC2C91C.idx  TestPeriodicBox.cpp.805C29CC2562B64D.idx  TestPeriodicBox.cpp.B06775BA683BA687.idx  TestVec.cpp.3D678977E74D9755.idx  TestVec.cpp.DC381208DF07C938.idx  TestVtkExport.cpp.A2A780E9CF041225.idx  Vec.hpp.1D1B88485ED9C30C.idx  Vec.hpp.9190B855903CD1BF.idx  VtkExport.hpp.6E6378A546A596E1.idx
.spack-env/: spack.yaml  view
.spack-env/.spack-env/: view
apps/: CMakeLists.txt  create-htgfile.cpp  poisson.cpp  tgv.cpp
src/: CMakeLists.txt
src/geometry/: PeriodicBox.cpp
src/io/: CMakeLists.txt  VtkExport.cpp
src/octree/: CMakeLists.txt  CellGrid.cpp  CellOctree.cpp  MortonIndex.cpp  OctreeGeometry.cpp
tests/: CMakeLists.txt
tests/task1/: TestPeriodicBox.cpp
tests/task2/: TestBox.cpp  TestOctreeGeometry.cpp
tests/task3/: CMakeLists.txt  TestCellView.cpp  TestVtkExport.cpp
tests/task4/: TestCursor.cpp  TestOctreeIterators.cpp
tests/task5/: CMakeLists.txt  TestUtilities.cpp
tests/task6/: CMakeLists.txt  TestVtkExportExtensions.cpp
tests/task7/: TestBasicLbmKernels.cpp
(+9624 files in other folders)
